Bring the matrix status onto the line that owns 1.20.4
Same status section as the 26.x line: 1.20.1 verified, 1.20.4 one crash away with the
concrete next step recorded, the rest untouched.